# soup-sharp

./: .gitignore  Makefile.am  README  configure.ac  soup-sharp.spec.in
samples/simple/: Makefile.am  Simple.cs
sources/: Makefile.am  soup-api.metadata  soup-api.raw  soup-sharp.pc.in  soup-sharp.snk
